# trios

./: .gitignore  .gitmodules  143.md  AGENTS.md  BUILD_STATUS.md  CLAUDE.md  Cargo.toml  Cargo.toml.bak  DASHBOARD.md  Dockerfile  GATE_FINAL_LANES_SUMMARY.md  HIVE.md  IGLA_RACE_ONE_SHOT.md  IGLA_TRAINING_PLAN.md  ISSUE_237_COMMENT.md  ISSUE_237_COMPLETION.md  LAWS.md  LICENSE  NOW.json  README.md  ROADMAP.md  TASK_8_RUNBOOK.md  TECH_DEBT.md  TRAINING_FLOW_V2.md  TRAINING_QUICKSTART.md  TRI-CLOUD-REPORT.md  WORKLOG.md  download_fineweb  download_fineweb.rs  metric.json  opencode.json  pr_marker.md  railway.toml  test_issue_237.sh  trios-mcp-issue-body.md  validate_bpb
contrib/anti-ban/: Cargo.toml
contrib/anti-ban/src/: checks.rs  lib.rs  main.rs
contrib/anti-ban/tests/: integration_test.rs
contrib/oracle/: Cargo.toml
contrib/oracle/src/: controller.rs  lib.rs  main.rs
crates/igla-trainer/: Cargo.toml
crates/igla-trainer/src/: config.rs  lib.rs  main.rs
crates/tools-defense-gate/: Cargo.toml
crates/tools-defense-gate/src/: main.rs
crates/trinity-extract/: Cargo.toml
crates/trinity-extract/src/: main.rs
crates/trios-a2a/: AGENTS.md  Cargo.toml  RING.md
crates/trios-a2a/rings/BR-OUTPUT/: AGENTS.md  Cargo.toml  RING.md  TASK.md
crates/trios-a2a/rings/SR-00/: AGENTS.md  Cargo.toml  RING.md  TASK.md
crates/trios-a2a/rings/SR-01/: AGENTS.md  Cargo.toml  RING.md  TASK.md
crates/trios-a2a/rings/SR-02/: AGENTS.md  Cargo.toml  README.md  TASK.md
crates/trios-a2a/rings/SR-03/: AGENTS.md  Cargo.toml  RING.md  TASK.md
crates/trios-a2a/src/: lib.rs
crates/trios-agent-memory/: Cargo.toml  RING.md
crates/trios-agent-memory/rings/BR-OUTPUT/: AGENTS.md  Cargo.toml  README.md  TASK.md
crates/trios-agent-memory/rings/SR-MEM-00/: AGENTS.md  Cargo.toml  README.md  RING.md  TASK.md
crates/trios-agent-memory/rings/SR-MEM-01/: AGENTS.md  Cargo.toml  README.md  RING.md  TASK.md
crates/trios-agent-memory/rings/SR-MEM-05/: AGENTS.md  Cargo.toml  README.md  RING.md  TASK.md
crates/trios-agent-memory/src/: lib.rs
crates/trios-agents/: Cargo.toml  README.md
crates/trios-agents/rings/AG-00/: AGENTS.md  README.md  TASK.md
crates/trios-agents/src/: client.rs  lib.rs  types.rs
crates/trios-algorithm-arena/: Cargo.toml  RING.md
crates/trios-algorithm-arena/rings/BR-OUTPUT/: AGENTS.md  Cargo.toml  README.md  RING.md  TASK.md
crates/trios-algorithm-arena/rings/SR-ALG-00/: AGENTS.md  Cargo.toml  README.md  RING.md  TASK.md
crates/trios-algorithm-arena/rings/SR-ALG-03/: AGENTS.md  Cargo.toml  (+3 more)
crates/trios-algorithm-arena/src/: invariants.rs  lib.rs  rungs.rs  verifier.rs  victory.rs
crates/trios-bridge/: AGENTS.md  Cargo.toml  RING.md
crates/trios-bridge/src/: lib.rs  main.rs  relay.rs  server.rs
crates/trios-claraParameter/: Cargo.toml
crates/trios-claraParameter/src/: lib.rs
crates/trios-claude/: AGENTS.md  Cargo.toml  RING.md
crates/trios-claude/src/: bridge.rs  client.rs  lib.rs  process.rs  session.rs
crates/trios-cli/: Cargo.toml  RING.md
crates/trios-cli/src/: config.rs  db.rs  gh.rs  lib.rs  lock.rs  main.rs  metrics.rs  table.rs
crates/trios-data/: AGENTS.md  Cargo.toml  RING.md
crates/trios-data/src/: lib.rs
crates/trios-doctor/: AGENTS.md  Cargo.toml  RING.md
crates/trios-doctor/src/: check.rs  doctor_loop.rs  heal.rs  lib.rs  main.rs  report.rs  validate_bpb.rs
crates/trios-dwagent/: .dockerignore  Cargo.toml  Dockerfile  README.md  railway.toml
crates/trios-dwagent/src/: main.rs
crates/trios-ext/: .gitignore  AGENTS.md  BROWSEROS.md  Cargo.toml  README.md  RING.md  SEAL.md  TASK.md  build.rs
crates/trios-ext/extension/: manifest.json  settings.html  settings.js  sidepanel.html
crates/trios-ext/src/: app.rs  bg.rs  bridge.rs  dom.rs  lib.rs  mcp.rs  style.css
crates/trios-ext/xtask/: Cargo.toml
crates/trios-fpga/: Cargo.toml  README.md  RING.md
crates/trios-fpga/src/: board.rs  build.rs  flash.rs  lib.rs  synth_readiness.rs  xdc.rs
crates/trios-fpga/tests/: integration.rs
crates/trios-gb/: Cargo.toml  RING.md
crates/trios-gb/src/: commands.rs
crates/trios-git/: Cargo.toml  RING.md
crates/trios-git/src/: absorb_simple.rs  absorb_smart.rs  branch.rs  commit.rs  diff.rs  lib.rs  log.rs  stage.rs  stash.rs  status.rs
crates/trios-golden-float/: AGENTS.md  Cargo.toml  README.md  RING.md  build.rs
crates/trios-golden-float/docs/: whitepaper.md
crates/trios-golden-float/src/: ffi.rs  lib.rs  router.rs
crates/trios-golden-float/tests/: gf16_benchmarks.rs  hybrid_tests.rs  router_tests.rs.bak
crates/trios-hdc/: AGENTS.md  Cargo.toml  RING.md  build.rs
crates/trios-hdc/src/: ffi.rs  lib.rs  phi_quantization.rs
crates/trios-igla-race/: Cargo.toml  RING.md
crates/trios-igla-race-hack/: Cargo.toml  RING.md
crates/trios-igla-race-hack/src/: api.rs  cli.rs  dashboard.rs  lib.rs  main.rs  status.rs
crates/trios-igla-race-pipeline/: AGENTS.md  Cargo.toml  README.md  RING.md  TASK.md
crates/trios-igla-race-pipeline/src/: asha.rs  lib.rs  sampler.rs  telemetry.rs  trial.rs  worker.rs
crates/trios-igla-race/schema/: igla_race.sql
crates/trios-igla-race/src/: asha.rs  attn.rs  grid.rs  hive_automaton.rs  invariants.rs  lessons.rs  lib.rs  main.rs  main.rs.backup  main.rs.bak  main_broken.rs  main_clean.rs  main_corrupted.rs  neon.rs  neon_broken.rs  neon_helper.rs  race.rs  run_worker_clean.rs  rungs.rs  sampler.rs  status.rs  status_broken.rs  status_old.rs  status_print_best.txt  victory.rs  victory_new.rs
crates/trios-igla-race/tests/: phi_grid_completeness.rs  preregistration_seed_lock.rs  preregistration_seed_lock_final.rs  proxy_correlation.rs
crates/trios-igla-trainer/: .gitignore  Cargo.toml
crates/trios-igla-trainer/src/: audit.rs  jepa_runner.rs  lib.rs  main.rs  schedule.rs
crates/trios-kg/: AGENTS.md  Cargo.toml  README.md  RING.md
crates/trios-kg/src/: client.rs  lib.rs  types.rs
crates/trios-kg/tests/: e2e.rs  integration.rs
crates/trios-llm/: Cargo.toml
crates/trios-llm/src/: lib.rs
crates/trios-mcp/: Cargo.toml  RING.md
crates/trios-mcp/src/: lib.rs  main.rs
(+1738 files in other folders)
