[workspace]
members = [
    "crates/trios-core",
    "crates/precision-router",
    "crates/trios-golden-float",
    "crates/trios-ternary",
    "crates/trios-tri",
    "crates/trios-hybrid",
    "crates/trios-training",
    "crates/trios-training-ffi",
    "crates/trios-train-cpu",
    "crates/trios-git",
    "crates/trios-gb",
    "crates/trios-server",
    "crates/trios-kg",
    "crates/trios-agents",
    "crates/trios-bridge",
    "crates/trinity-brain",
    "crates/trios-zig-agents",
    "crates/zig-agents",
    "crates/trios-hdc",
    "crates/trios-physics",
    "crates/trios-sacred",
    "crates/trios-crypto",
    "crates/trios-data",
    "crates/trios-vm",
    "crates/trios-vsa",
    "crates/trios-model",
    "crates/trios-llm",
    "crates/trios-sdk",
    "crates/trios-ca-mask",
    "crates/trios-phi-schedule",
    "crates/trios-trinity-init",
    "crates/trios-fpga",
    "crates/trios-doctor",
    "crates/trios-ext",
    "crates/igla-trainer",
    "crates/trios-claude",
    "contrib/anti-ban",
    "contrib/oracle",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dmitrii Vasilev"]
license = "MIT"
repository = "https://github.com/gHashTag/trios"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
git2 = "0.19"
async-trait = "0.1"
tempfile = "3"
thiserror = "1"
futures = "0.3"
lazy_static = "1.4"
libc = "0.2"
rand = "0.8"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
