[workspace]
members = [
    "crates/trios-core",
    "crates/trios-precision-router",
    "crates/trios-golden-float",
    "crates/trios-ternary",
    "crates/trios-tri",
    "crates/trios-hybrid",
    "crates/trios-training",
    "crates/trios-training-ffi",
    "crates/trios-train-cpu",
    "crates/trios-git",
    "crates/trios-server",
    "crates/trios-gb",
    "crates/trios-agents",
    "crates/trios-bridge",
    "crates/trios-trinity-brain",
    "crates/trios-zig-agents",
    "crates/trios-hdc",
    "crates/trios-physics",
    "crates/trios-sacred",
    "crates/trios-crypto",
    "crates/trios-data",
    "crates/trios-vm",
    "crates/trios-vsa",
    "crates/trios-model",
    "crates/trios-llm",
    "crates/trios-sdk",
    "crates/trios-ca-mask",
    "crates/trios-phi-schedule",
    "crates/trios-trinity-init",
    "crates/trios-igla-race",
    "crates/trios-fpga",
    # trios-doctor — Ring Architecture (issue #254)
    "crates/trios-doctor/rings/SILVER-RING-DR-00",
    "crates/trios-doctor/rings/SILVER-RING-DR-01",
    "crates/trios-doctor/rings/SILVER-RING-DR-02",
    "crates/trios-doctor/rings/SILVER-RING-DR-03",
    "crates/trios-doctor/rings/BRONZE-RING-DR",
    # trios-ext — Ring Architecture (issue #247)
    "crates/trios-ext/rings/SILVER-RING-EXT-00",
    "crates/trios-ext/rings/SILVER-RING-EXT-01",
    "crates/trios-ext/rings/SILVER-RING-EXT-02",
    "crates/trios-ext/rings/SILVER-RING-EXT-03",
    "crates/trios-ext/rings/BRONZE-RING-EXT/xtask",
    # trios-ui — Ring Architecture (Dioxus sidebar)
    "crates/trios-ui/rings/UR-00",
    "crates/trios-ui/rings/UR-07",
    "crates/trios-ui/rings/UR-08",
    "crates/trios-ui/rings/BR-APP",
    "crates/trios-igla-trainer",
    "crates/trios-igla-race",
    "crates/trios-cli",
    "crates/trios-claude",
    "crates/tri-tunnel",
    "crates/tri-cli",
    "contrib/anti-ban",
    "contrib/oracle",
    "crates/trios-operator-smoke",
    "crates/trios-server/xtask",
    "crates/trios-ipc",
    # trios-mcp — MCP Client Adapter (issue #256)
    "crates/trios-mcp",
    "crates/trios-mcp/rings/SR-00",
    "crates/trios-mcp/rings/SR-01",
]
exclude = [
    "crates/trios-ext",
    "crates/trios-ui",
    "crates/trios-a2a",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dmitrii Vasilev"]
license = "MIT"
repository = "https://github.com/gHashTag/trios"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
git2 = "0.19"
async-trait = "0.1"
tempfile = "3"
thiserror = "1"
futures = "0.3"
lazy_static = "1.4"
libc = "0.2"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
