[package]
name = "oracle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PBT kill/spawn controller for Parameter Golf (Agent DELTA, #126)"

[[bin]]
name = "oracle"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
