[package]
name = "tools-defense-gate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "LD lane falsification witness: checks defense-package presence + size budgets per ONE SHOT v2.0 (trios#265)."

[[bin]]
name = "tools-defense-gate"
path = "src/main.rs"
