[package]
name = "trinity-extract"
version = "0.1.0"
edition = "2021"
description = "Coq proof extractor for IGLA assertions — reads .v files, emits igla_assertions.json (L-R1: RUST ONLY)"

[[bin]]
name = "trinity-extract"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
