[package]
name = "trios-a2a"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TRIOS A2A — Agent-to-Agent protocol (Ring Isolation architecture)"
publish = false

[workspace]
members = [
    "rings/SR-00",
    "rings/SR-01",
    "rings/SR-02",
    "rings/BR-OUTPUT",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dmitrii Vasilev"]
license = "MIT"
repository = "https://github.com/gHashTag/trios"

[dependencies]
trios-a2a-sr00 = { path = "rings/SR-00" }
trios-a2a-sr01 = { path = "rings/SR-01" }
trios-a2a-sr02 = { path = "rings/SR-02" }

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
