[package]
name = "trios-agent-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TRIOS AGENT MEMORY — GOLD IV crate (anti-amnesia foundation)"
publish = false

[workspace]
members = [
    "rings/SR-MEM-00",
    "rings/SR-MEM-01",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dmitrii Vasilev"]
license = "MIT"
repository = "https://github.com/gHashTag/trios"

[dependencies]
trios-agent-memory-sr-mem-00 = { path = "rings/SR-MEM-00" }
trios-agent-memory-sr-mem-01 = { path = "rings/SR-MEM-01" }

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
