[package]
name = "trios-agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP client + MCP proxy for zig-agents (AI agent orchestration)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tracing = { workspace = true }
