[package]
name = "trios-algorithm-arena"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
tokio-postgres = "0.7"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4", "serde"] }
anyhow = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }

# Note: arena is a dependency of pipeline, not vice versa
# This breaks the circular dependency

[dev-dependencies]
criterion = "0.5"

# TODO: Add benchmarks when arena is implemented
# [[bench]]
# name = "arena_bench"
# harness = false
