[package]
name = "trios-algorithm-arena"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TRIOS ALGORITHM ARENA — GOLD II crate (algorithm spec metadata)"
publish = false

[workspace]
members = [
    "rings/SR-ALG-00",
    "rings/SR-ALG-03",
    "rings/BR-OUTPUT",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dmitrii Vasilev"]
license = "MIT"
repository = "https://github.com/gHashTag/trios"

[dependencies]
trios-algorithm-arena-sr-alg-00 = { path = "rings/SR-ALG-00" }
trios-algorithm-arena-sr-alg-03 = { path = "rings/SR-ALG-03" }
trios-algorithm-arena-br-output = { path = "rings/BR-OUTPUT" }

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
