[package]
name = "trios-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Trinity Agent Bridge — WebSocket server for multi-agent orchestration"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tokio-tungstenite = "0.24"
tungstenite = "0.24"
futures-util = "0.3"
octocrab = "0.38"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
