[package]
name = "trios-claraParameter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Trinity Parameter Golf — Ensemble + Final Submission MCP Tool"

[dependencies]
libc = "0.2"
anyhow = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
cc = "1.0"
