[package]
name = "trios-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Trios CLI for IGLA needle hunt automation"

[[bin]]
name = "tri"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
git2 = { workspace = true }
rusqlite = "0.30"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = "1.10"

[dev-dependencies]
tempfile = { workspace = true }
