[package]
name = "trios-data"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "FineWeb data loader for Trinity training (Φ5.5)"

[dependencies]
serde = { workspace = true, optional = true }

[features]
default = []
json = ["serde"]
