[package]
name = "trios-doctor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Leukocyte agent: autonomous diagnostics, healing, and quick-win repair for trios workspace"

[[bin]]
name = "trios-doctor"
path = "src/main.rs"

[[bin]]
name = "validate_bpb"
path = "src/validate_bpb.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
