[package]
name = "trios-doctor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Leukocyte agent: autonomous diagnostics, healing, and quick-win repair for trios workspace"

[[bin]]
name = "trios-doctor"
path = "src/main.rs"

[[bin]]
name = "validate_bpb"
path = "src/validate_bpb.rs"

[[bin]]
name = "trios-doctor-loop"
path = "src/doctor_loop.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
# Queen ↔ Doctor autonomous loop (bee/queen-doctor-autoloop)
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile.workspace = true
