[package]
name = "trios-ext"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Trios Chrome Extension — Rust/WASM (no handwritten JS)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.118"
web-sys = { version = "0.3.69", features = [
    "Window", "Document", "Element", "HtmlElement", "HtmlInputElement",
    "HtmlCollection", "NodeList", "DomTokenList",
    "Request", "RequestInit", "RequestMode", "Response", "Headers",
    "Event", "EventTarget", "KeyboardEvent",
    "console",
] }
js-sys = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 4
