[package]
name = "trios-ext"
version = "0.1.0"
edition = "2021"
authors = ["Dmitrii Vasilev"]
license = "MIT"
repository = "https://github.com/gHashTag/trios"
description = "TRIOS Chrome Extension — Rust/WASM (Ring Isolation architecture)"
publish = false

[workspace]
members = [
    "rings/EXT-00",
    "rings/EXT-01",
    "rings/EXT-02",
    "rings/EXT-03",
    "rings/BR-EXT",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dmitrii Vasilev"]
license = "MIT"
repository = "https://github.com/gHashTag/trios"

[dependencies]
trios-ext-00 = { path = "rings/EXT-00" }
trios-ext-01 = { path = "rings/EXT-01" }
trios-ext-02 = { path = "rings/EXT-02" }
trios-ext-03 = { path = "rings/EXT-03" }

[workspace.dependencies]
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3.69", features = [
    "Window", "Document", "Element", "HtmlElement", "HtmlInputElement",
    "HtmlTextAreaElement", "HtmlButtonElement", "Location",
    "HtmlCollection", "NodeList", "DomTokenList",
    "Request", "RequestInit", "RequestMode", "Response", "Headers",
    "Event", "EventTarget", "KeyboardEvent",
    "console",
] }
