[package]
name = "trios-fpga"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "FPGA build pipeline, JTAG flash, and board support for Trinity S3AI"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
