[package]
name = "trios-gb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
trios-core = { path = "../trios-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
