[package]
name = "trios-golden-float"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust bindings for zig-golden-float (GF16 numeric core)"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(has_zig_lib)"] }

[dependencies]
libc = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
cc = "1.0"
