[package]
name = "trios-hdc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust bindings for zig-hdc (Hyperdimensional Computing / VSA operations)"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(has_zig_lib)"] }

[dependencies]
libc = "0.2"

[features]
hdc-stub = []
hdc-real = []

[build-dependencies]
cc = "1.0"
