[package]
name = "trios-igla-race-hack"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TRIOS IGLA RACE HACK — GOLD III crate (outreach DMs, PR comments, leaderboard rows, Discord)"
publish = false

[workspace]
members = [
    "rings/SR-HACK-00",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dmitrii Vasilev"]
license = "MIT"
repository = "https://github.com/gHashTag/trios"

[dependencies]
trios-igla-race-hack-sr-hack-00 = { path = "rings/SR-HACK-00" }

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
