[package]
name = "trios-igla-race-hack"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
tokio-postgres = "0.7"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde", "clock"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4", "serde"] }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
thiserror = { workspace = true }

# API server
axum = "0.8"
axum-macros = "0.5"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Trinity dependencies
trios-igla-race-pipeline = { workspace = true }
trios-algorithm-arena = { workspace = true }

[[bin]]
name = "trios-igla-race"
path = "src/main.rs"
