[package]
name = "trios-igla-race-pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
tokio-postgres = "0.7"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4", "serde"] }
anyhow = { workspace = true }
rand = { workspace = true }
rand_distr = "0.5"
thiserror = { workspace = true }

# Trinity dependencies
trios-algorithm-arena = { workspace = true }

[dev-dependencies]
criterion = "0.5"

# TODO: Add benchmarks when pipeline is implemented
# [[bench]]
# name = "pipeline_bench"
# harness = false
