[package]
name = "trios-igla-race-pipeline"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TRIOS IGLA RACE PIPELINE — GOLD I crate (E2E TTT pipeline O(1) per chunk)"
publish = false

[workspace]
members = [
    "rings/SR-00",
    "rings/SR-03",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dmitrii Vasilev"]
license = "MIT"
repository = "https://github.com/gHashTag/trios"

[dependencies]
trios-igla-race-pipeline-sr-00 = { path = "rings/SR-00" }
trios-igla-race-pipeline-sr-03 = { path = "rings/SR-03" }

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
