[package]
name = "trios-igla-race-pipeline"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TRIOS IGLA RACE PIPELINE — GOLD I crate (E2E TTT pipeline O(1) per chunk)"
publish = false

[workspace]
members = [
    "rings/SR-00",
    "rings/SR-01",
    "rings/SR-03",
    "rings/SR-04",
    "rings/BR-OUTPUT",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dmitrii Vasilev"]
license = "MIT"
repository = "https://github.com/gHashTag/trios"

[dependencies]
trios-igla-race-pipeline-sr-00 = { path = "rings/SR-00" }
trios-igla-race-pipeline-sr-01 = { path = "rings/SR-01" }
trios-igla-race-pipeline-sr-03 = { path = "rings/SR-03" }
trios-igla-race-pipeline-sr-04 = { path = "rings/SR-04" }
trios-igla-race-pipeline-br-output = { path = "rings/BR-OUTPUT" }

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
