[package]
name = "trios-igla-race"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
rand = "0.8"

[[bin]]
name = "trios-igla-race"
path = "src/main.rs"
