[package]
name = "trios-kg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP client for zig-knowledge-graph REST API"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tracing = { workspace = true }
thiserror = { workspace = true }
