[package]
name = "trios-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP (Model Context Protocol) client adapter for trios"

[dependencies]
# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Additional dependencies for MCP
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
base64 = "0.22"
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "trios_mcp"
path = "src/lib.rs"
