[package]
name = "trios-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP (Model Context Protocol) client adapter for trios"

[dependencies]
# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Ring dependencies
trios-mcp-sr00 = { path = "rings/SR-00" }
trios-mcp-sr01 = { path = "rings/SR-01" }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "trios_mcp"
path = "src/lib.rs"
